--- a/juplaylist/src/app/css/PhoneInput.css
+++ b/juplaylist/src/app/css/PhoneInput.css
@@ -1,6 +1,6 @@
 /* Path: juplaylist/src/app/css/PhoneInput.css */
 
-fieldset {
+.phoneInput {
   border-radius: 10px;
   border: 1px solid #e0e0e0;
   padding: 5px 10px 10px 10px;
@@ -8,13 +8,13 @@ fieldset {
   padding-bottom: 12px;
 }
 
-fieldset > div {
+.phoneInput > div {
   display: flex;
   gap: 5px;
   flex-direction: row;
 }
 
-legend {
+.phoneInput legend {
   color: #000;
   font-weight: 600;
   margin-left: 15px;
@@ -22,19 +22,19 @@ legend {
   padding: 0 5px;
 }
 
-fieldset > div > p {
+.phoneInput > div > p {
   color: #808080;
 }
 
-hr {
+.phoneInput hr {
   border: #e0e0e0 0.5px solid;
 }
 
-input::placeholder {
+.phoneInput input::placeholder {
   color: #e0e0e0;
 }
 
-input {
+.phoneInput input {
   border: none;
   font-size: 1rem;
   width: 100%;
