--- a/juplaylist/src/app/css/ToggleSwitch.css
+++ b/juplaylist/src/app/css/ToggleSwitch.css
@@ -11,32 +11,64 @@
 }
 
 .toggle-switch .switch {
+  position: relative;
   display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: space-evenly;
   min-width: 230px;
   max-width: 260px;
   width: 20vw;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: row;
+  height: 100%;
   background-color: #f7f7f7;
-  padding: 20px 0;
   border-radius: 50px;
 }
 
-.toggle-switch .left,
-.toggle-switch .right {
+.toggle-switch .switch .left,
+.toggle-switch .switch .right {
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
-  flex: 1;
-  border-radius: 50px;
-  background-color: red;
-  color: #000;
-  font-size: 1.2rem;
+  height: 100%;
   cursor: pointer;
   transition: all 0.3s ease;
+  z-index: 2;
 }
 
-.toggle-switch .active {
-  background-color: #e1e1e1;
+.toggle-switch .switch .bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #e0e0e0;
+  border-radius: 50px;
+  z-index: 1;
+}
+
+.toggle-switch .switch .slide-left {
+  animation: slideToLeft 0.3s ease forwards;
+}
+
+.toggle-switch .switch .slide-right {
+  animation: slideToRight 0.3s ease forwards;
+}
+
+@keyframes slideToLeft {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideToRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
