--- a/juplaylist/src/app/css/Joining.css
+++ b/juplaylist/src/app/css/Joining.css
@@ -37,6 +37,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .event-field fieldset {
@@ -67,24 +68,6 @@
 
 .event-field input:focus {
   outline: none;
-}
-
-.joining button {
-  width: 20%;
-  border: none;
-  border-radius: 25px;
-  background-color: #000;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  padding: 5px;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
-.joining button:hover {
-  background-color: #808080;
 }
 
 .joining .separator {
@@ -120,11 +103,6 @@
   .event-field fieldset {
     width: 70%;
   }
-
-  .joining button {
-    width: 50%;
-  }
-
   .joining .separator {
     width: 70%;
   }
