--- a/juplaylist/src/app/css/ToggleSwitch.css
+++ b/juplaylist/src/app/css/ToggleSwitch.css
@@ -6,8 +6,8 @@
   width: 100%;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-  padding: 20px 0;
-  height: 100px;
+  padding: 10px 0 20px 0;
+  height: 80px;
 }
 
 .toggle-switch .switch {
@@ -19,7 +19,7 @@
   min-width: 230px;
   max-width: 260px;
   width: 20vw;
-  height: 100%;
+  height: 40px;
   background-color: #f7f7f7;
   border-radius: 50px;
 }
